# P5-medical-data-etl-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.py
notebooks_and_tests/: README.md
scripts/: crud_examples.py  etl.py
